--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -222,7 +222,7 @@ fbq('track', 'PageView');
 						<div class="elementor-element elementor-element-55f96182 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="55f96182" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://mpaltda.mycartpanda.com/checkout/160661577:1" id="botaozin">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -334,7 +334,7 @@ fbq('track', 'PageView');
 				<div class="elementor-element elementor-element-1195dbb4 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="1195dbb4" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://mpaltda.mycartpanda.com/checkout/160661577:1" id="botaozin">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -510,7 +510,7 @@ com vários equipamentos para você trabalhar.					</p>
 						<div class="elementor-element elementor-element-bc3dddd elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="bc3dddd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://mpaltda.mycartpanda.com/checkout/160661577:1" id="botaozin">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Comprar Moldes Agora</span>
 					</span>
@@ -630,7 +630,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-1f7d9a67 elementor-align-center elementor-widget elementor-widget-button" data-id="1f7d9a67" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://mpaltda.mycartpanda.com/checkout/160661577:1">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661577:1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -752,7 +752,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-251ff89 elementor-align-center elementor-widget elementor-widget-button" data-id="251ff89" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://mpaltda.mycartpanda.com/checkout/160661670:1">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661670:1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR PLANO OURO</span>
 					</span>
