--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -1,6 +1,14 @@
 ﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NRP3VMHK');</script>
+<!-- End Google Tag Manager -->
+	
 	<meta charset="UTF-8">
 			<title>Moldes Para Feltro</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -140,7 +148,11 @@ fbq('track', 'PageView');
 </style>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"></head>
 <body class="home page-template page-template-elementor_canvas page page-id-6 wp-embed-responsive elementor-default elementor-template-canvas elementor-kit-5 elementor-page elementor-page-6">
-			<div data-elementor-type="wp-post" data-elementor-id="6" class="elementor elementor-6">
+		<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRP3VMHK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->	
+	<div data-elementor-type="wp-post" data-elementor-id="6" class="elementor elementor-6">
 						<section class="elementor-section elementor-top-section elementor-element elementor-element-454567d7 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="454567d7" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-7ed04d79" data-id="7ed04d79" data-element_type="column">
