--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -234,7 +234,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="elementor-element elementor-element-55f96182 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="55f96182" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -346,7 +346,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-1195dbb4 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="1195dbb4" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -522,7 +522,7 @@ com vários equipamentos para você trabalhar.					</p>
 						<div class="elementor-element elementor-element-bc3dddd elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="bc3dddd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Comprar Moldes Agora</span>
 					</span>
@@ -642,7 +642,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-1f7d9a67 elementor-align-center elementor-widget elementor-widget-button" data-id="1f7d9a67" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661577:1">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661577:1" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -764,7 +764,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-251ff89 elementor-align-center elementor-widget elementor-widget-button" data-id="251ff89" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661670:1">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661670:1" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR PLANO OURO</span>
 					</span>
