--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div data-elementor-type="wp-post" data-elementor-id="6" class="elementor elementor-6">
 						<section class="elementor-section elementor-top-section elementor-element elementor-element-454567d7 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="454567d7" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
-					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-7ed04d79" data-id="7ed04d79" data-element_type="column">
+					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-7ed04d79" data-id="7ed04d79" data-element_type="column" style="padding-bottom: 10px;">
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-669cdaf9 elementor-widget elementor-widget-spacer" data-id="669cdaf9" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
@@ -1032,7 +1032,7 @@ com vários equipamentos para você trabalhar.					</p>
 			<div class="elementor-widget-wrap">
 							</div>
 		</div>
-				<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-685ad10a" data-id="685ad10a" data-element_type="column">
+				<div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-685ad10a" data-id="685ad10a" data-element_type="column" style="padding-bottom: 20px;">
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-4ceea306 elementor-widget elementor-widget-heading" data-id="4ceea306" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
