--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -480,7 +480,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="elementor-element elementor-element-55f96182 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="55f96182" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.kiwify.com.br/EY6kDMR" id="botaozin" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.kiwify.com.br/UHdgG3g" id="botaozin" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -592,7 +592,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-1195dbb4 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="1195dbb4" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.kiwify.com.br/EY6kDMR" id="botaozin" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.kiwify.com.br/UHdgG3g" id="botaozin" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -768,7 +768,7 @@ com vários equipamentos para você trabalhar.					</p>
 						<div class="elementor-element elementor-element-bc3dddd elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="bc3dddd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.kiwify.com.br/EY6kDMR" id="botaozin" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.kiwify.com.br/UHdgG3g" id="botaozin" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Comprar Moldes Agora</span>
 					</span>
@@ -888,7 +888,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-1f7d9a67 elementor-align-center elementor-widget elementor-widget-button" data-id="1f7d9a67" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.kiwify.com.br/EY6kDMR" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.kiwify.com.br/UHdgG3g" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -1010,7 +1010,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-251ff89 elementor-align-center elementor-widget elementor-widget-button" data-id="251ff89" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.kiwify.com.br/LHkIdHe" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.kiwify.com.br/xraZ9X4" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR PLANO OURO</span>
 					</span>
