--- a/costura/moldes/index.htm
+++ b/costura/moldes/index.htm
@@ -309,7 +309,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-cart-plus"></i>			</span>
+				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">QUERO ESSE PACOTE!</span>
 					</span>
 					</a>
@@ -322,7 +322,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-cart-plus"></i>			</span>
+				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">QUERO ESSE PACOTE!</span>
 					</span>
 					</a>
@@ -598,7 +598,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">PACOTE COMPLETO DE MOLDES</span>
 					</span>
 					</a>
@@ -771,7 +771,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">Moldes de Roupas Infantis</span>
 					</span>
 					</a>
@@ -788,7 +788,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">Moldes de Roupas Femininas</span>
 					</span>
 					</a>
@@ -805,7 +805,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">Moldes de Roupas Masculinas</span>
 					</span>
 					</a>
@@ -822,7 +822,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">Moldes de Uniformes Hospitalares e em Geral</span>
 					</span>
 					</a>
@@ -839,7 +839,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">Moldes de Moda Intima</span>
 					</span>
 					</a>
@@ -856,7 +856,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">Moldes de Roupas e Acessórios PET</span>
 					</span>
 					</a>
@@ -873,7 +873,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-size-xs" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-arrow-down"></i>			</span>
+				<i aria-hidden="true" class="fas fa-arrow-down" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">Moldes e Vídeos Aulas de Costura Criativa</span>
 					</span>
 					</a>
@@ -1006,7 +1006,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-cart-plus"></i>			</span>
+				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
 					</a>
@@ -1019,7 +1019,7 @@ E muitas novidades... <span style="color: var( --e-global-color-secondary );font
 					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-pulse" href="https://pay.vagalimitada.com/checkout/162243779:1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon">
-				<i aria-hidden="true" class="fas fa-cart-plus"></i>			</span>
+				<i aria-hidden="true" class="fas fa-cart-plus" style="display:none!important;"></i>			</span>
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
 					</a>
