--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -480,7 +480,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="elementor-element elementor-element-55f96182 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="55f96182" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#preco" id="botaozin">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -596,7 +596,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-element elementor-element-1195dbb4 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="1195dbb4" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#preco" id="botaozin">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA POR R$10</span>
 					</span>
@@ -772,7 +772,7 @@ com vários equipamentos para você trabalhar.					</p>
 						<div class="elementor-element elementor-element-bc3dddd elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="bc3dddd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.vagalimitada.com/checkout/160661577:1" id="botaozin" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#preco" id="botaozin">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Comprar Moldes Agora</span>
 					</span>
@@ -840,7 +840,7 @@ com vários equipamentos para você trabalhar.					</p>
 						<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-328bbc9" data-id="328bbc9" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
-						<div class="elementor-element elementor-element-64d00321 elementor-widget elementor-widget-heading" data-id="64d00321" data-element_type="widget" data-widget_type="heading.default">
+						<div class="elementor-element elementor-element-64d00321 elementor-widget elementor-widget-heading" data-id="64d00321" data-element_type="widget" data-widget_type="heading.default" id="preco">
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">ESCOLHA  A MELHOR OPÇÃO PARA VOCÊ!</h2>		</div>
 				</div>
@@ -892,7 +892,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-1f7d9a67 elementor-align-center elementor-widget elementor-widget-button" data-id="1f7d9a67" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661577:1" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163250:1" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -1014,7 +1014,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-251ff89 elementor-align-center elementor-widget elementor-widget-button" data-id="251ff89" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/160661670:1" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163249:1" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR PLANO OURO</span>
 					</span>
