--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -892,7 +892,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-1f7d9a67 elementor-align-center elementor-widget elementor-widget-button" data-id="1f7d9a67" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163250:1" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163250:1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR AGORA</span>
 					</span>
@@ -1014,7 +1014,7 @@ com vários equipamentos para você trabalhar.					</p>
 				<div class="elementor-element elementor-element-251ff89 elementor-align-center elementor-widget elementor-widget-button" data-id="251ff89" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163249:1" target="_blank">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://pay.vagalimitada.com/checkout/168163249:1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">COMPRAR PLANO OURO</span>
 					</span>
