--- a/moldesparafeltro/index.html
+++ b/moldesparafeltro/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	
-<section
+<!--<section
   class="elementor-section elementor-top-section elementor-element elementor-element-4055416a elementor-hidden-desktop elementor-hidden-tablet elementor-section-boxed elementor-section-height-default elementor-section-height-default custom-background"
   data-id="4055416a"
   data-element_type="section"
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-</section>
+</section>-->
 
 	<script>let already_runned = false;function getParams() {return new URLSearchParams(window.location.search).toString();}document.addEventListener("DOMContentLoaded", function() {if (!already_runned) {already_runned = true;let params = getParams();if (params) {document.querySelectorAll("a").forEach(function(e) {if (e.href) {if (e.href.includes("?")) {e.href += "&" + params;} else {e.href += "?" + params;}}});}}});</script>
 	
